--- a/src/app/views/products/fields.njk
+++ b/src/app/views/products/fields.njk
@@ -38,8 +38,8 @@
 
     </div>
         <div class="photos-preview" id="photos-preview">
-            {% if files %}
-                {% for image in files %}
+            {% if product.files %}
+                {% for image in product.files %}
                     <div class="photo" id={{image.id}}>
                         <img src="{{image.src}}" alt="{{image.name}}" >
                         <i class="material-icons"
@@ -48,7 +48,7 @@
                         </i>
                     </div>
                 {% endfor %}
-                <input type="hidden" name="removed_files">
+                <input type="hidden" name="removed_product.files">
             {% endif %}
         </div> 
     </div>
@@ -57,9 +57,9 @@
 <div class="item">
     <div>Valor</div>
     <div>
-        <input type="text" name="price" onkeydown="Mask.apply(this,'formatBRL')" placeholder="Preço do Produto" value="{{ product.price }}">
+        <input type="text" name="price" onkeydown="Mask.apply(this,'formatBRL')" placeholder="Preço do Produto" value="{{ product.formattedPrice }}">
     </div>
-    {% if product.old_price %}
+    {% if product.formattedOldPrice%}
         <input type="hidden"  name="old_price" value="product.old_price">
     {% endif %}
 </div> 
