--- a/src/app/views/session/forgot-password.njk
+++ b/src/app/views/session/forgot-password.njk
@@ -1,14 +1,13 @@
 {% extends "layout.njk" %}
 
+{% import "parts/card.njk" as cards %}
+
 {% block content %}
 
+{% call cards.render('Esquecel a senha','login container')%}
    <section class="login container form" >
 
             <form method="post" action="/users/forgot-password">
-                <div class="header">
-                    <h3>Esqueceu a senha?</h3>
-                </div>
-
                 <div class="fields">
                     <div class="item">
                         <div>Email</div>
@@ -18,10 +17,8 @@
                     </div> 
                 </div>
                 <button class="button" type="submit">Recuperar senha</button>
-
-
             </form>
 
-   </section>
+   {%endcall%}
 
 {% endblock content %}
