--- a/src/app/views/layout.njk
+++ b/src/app/views/layout.njk
@@ -13,6 +13,11 @@
     <link rel="stylesheet" href="/message.css">
     <link rel="stylesheet" href="/menuaccounts.css">
     <link rel="stylesheet" href="/session.css">
+    <link rel="stylesheet" href="/card.css">
+    <link rel="stylesheet" href="/users.css">
+    <link rel="stylesheet" href="/products.css">
+    <link rel="stylesheet" href="/orders.css">
+    <link rel="stylesheet" href="/cart.css">
 </head>
 <body>
     {%include "parts/message.njk"%}
