--- a/src/app/views/parts/header.njk
+++ b/src/app/views/parts/header.njk
@@ -29,14 +29,12 @@
                 {%if session.userId%}
                 <ul class="submenu">
                     <li>
-                        <a href="/users">Minha conta</a>
+                        <a href="/users/ads">Minha conta</a>
                     </li>
                      <li>
-                        <a href="/buying">Meus pedidos</a>
+                        <a href="/buying">Meus anúncios</a>
                     </li>
-                     <li>
-                        <a href="/selling">Minhas vendas</a>
-                    </li>
+                     
                     <li>
                         <form action="/users/logout" method="post">
                             <button>Sair</button>
