--- a/src/app/views/session/login.njk
+++ b/src/app/views/session/login.njk
@@ -1,14 +1,13 @@
 {% extends "layout.njk" %}
 
+{% import "parts/card.njk" as cards %}
+
 {% block content %}
 
-   <section class="login container form" >
+{% call cards.render('Entrar','login container')%}
 
-            <form method="post" action="/users/login" >
-                <div class="header">
-                    <h3>Entrar</h3>
-                </div>
-
+        <form method="post" action="/users/login" >
+               
                 <div class="fields">
                     {% include 'session/fields.njk' %}
                     <button class="button" type="submit">Entrar</button>
@@ -21,7 +20,5 @@
                 </div>
 
             </form>
-
-   </section>
-
+{%endcall %}
 {% endblock content %}
