--- a/public/cart.css
+++ b/public/cart.css
@@ -117,6 +117,18 @@
     background: rgba(0,220,64);
 }
 
+.cart-empty p{
+    text-align: center;    
+}
 
+.cart-empty p {
+    font-size: 18px;
+}
+
+.cart-empty .button{
+    width: 240px;
+    margin: 16px auto;
+
+}
 
 
