--- a/src/app/views/cart/index.njk
+++ b/src/app/views/cart/index.njk
@@ -2,7 +2,17 @@
 
 {% import "parts/card.njk" as cards %}
 
+
 {% block content %}
+
+
+    {% if (cart.items)and(cart.items.length <1)%}
+        {% call cards.render('','cart-empty container')%}
+                  <p>Seu carrinho  está vazio</p>  
+                  <a href="/product/search" class="button">Comprar</a>    
+        {%endcall %}
+        </section>
+    {%else%}
 
     {% call cards.render('carrinho','cart container')%}
 
@@ -33,7 +43,7 @@
 
                     <span class="quantity">{{item.quantity}}</span>
 
-                    <form action="/cart/{{item.product.id}}/remove" method="POST">
+                    <form action="/cart/{{item.product.id}}/add-one" method="POST">
                         <button class="add">
                             <i class="material-icons">add_circle_outline</i>
                         </button>
@@ -66,5 +76,7 @@
     </div>
             
 {%endcall %}
+
+{%endif%}
 
 {% endblock content %}
