--- a/public/styles.css
+++ b/public/styles.css
@@ -120,22 +120,23 @@ header div.container a {
 
 /* PRIMARY MENU */
 
-nav.primary ul {
+nav.primary > ul {
     display: flex;
     justify-content: space-between;
 }
 
-nav.primary ul li a {
+nav.primary > ul > li > a {
     display: flex;
     align-items: center;
     color: white;
+    height: 48px;
 }
 
-nav.primary ul li a:hover {
+nav.primary > ul > li > a:hover {
     color: #d7780b;
 }
 
-nav.primary ul li a i {
+nav.primary > ul > li > a > i {
     margin-right: 8px;
 }
 
