--- a/src/app/views/cart/index.njk
+++ b/src/app/views/cart/index.njk
@@ -68,7 +68,7 @@
 
     <div class="action">
         <a href="/products/search" class="button shop">Continuar comprando</a>
-        <form action="/ordens" method="POST">
+        <form action="/orders" method="POST">
             <button class="button order">
                 Realizar pedido
             </button>
