--- a/src/app/views/layout.njk
+++ b/src/app/views/layout.njk
@@ -11,13 +11,14 @@
     <link rel="stylesheet" href="/styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap">
     <link rel="stylesheet" href="/message.css">
-    <link rel="stylesheet" href="/menuaccounts.css">
     <link rel="stylesheet" href="/session.css">
     <link rel="stylesheet" href="/card.css">
     <link rel="stylesheet" href="/users.css">
     <link rel="stylesheet" href="/products.css">
     <link rel="stylesheet" href="/orders.css">
     <link rel="stylesheet" href="/cart.css">
+    <link rel="stylesheet" href="/dropdown.css">
+
 </head>
 <body>
     {%include "parts/message.njk"%}
