--- a/src/app/views/parts/header.njk
+++ b/src/app/views/parts/header.njk
@@ -21,18 +21,26 @@
                     Novo anúncio
                 </a>
             </li>
-            <li class="accounts">
+            <li class="dropdown-container">
                 <a href="/accounts">
                     <i class="material-icons">account_circle</i>
                     Minha Conta
                 </a>
                 {%if session.userId%}
-                <ul class="submenu">
+                <ul class="dropdown">
                     <li>
                         <a href="/users/ads">Minha conta</a>
                     </li>
                      <li>
-                        <a href="/buying">Meus anúncios</a>
+                        <a href="/users/ads">Meus anúncios</a>
+                    </li>
+
+                     <li>
+                        <a href="/orders">Meus pedidos</a>
+                    </li>
+
+                     <li>
+                        <a href="/orders/sales">Minhas vendas</a>
                     </li>
                      
                     <li>
@@ -42,6 +50,14 @@
                     </li>
                 </ul>
                {%endif%}
+            </li>
+            <li class="cart">
+                <a href="/cart">
+                    <i class="material-icons">shopping_cart</i>
+                    {%if (session.cart) and (session.cart.total.quantity > 0)%}
+                    <span od="cart-status-info">{{session.cart.total.quantity}}</span>
+                    {%endif%}
+                </a>
             </li>
         </ul>
 
